--- a/contacts.html
+++ b/contacts.html
@@ -144,7 +144,7 @@
         <h2 style="font-size: 1.5rem;">📬 Напиши нам на пошту</h2>
         <p style="font-size: 1.1rem; margin-top: 0.5rem;">
           <a href="mailto:ideas.team.platform@gmail.com" style="color: #3b82f6; text-decoration: none;">
-            ideas.team.platform@gmail.com
+            i.r.rykhlitskyi@gmail.com
           </a>
         </p>
         <p>Ми відповімо якнайшвидше 😉</p>
@@ -162,8 +162,8 @@
 
       <section class="about-section" style="margin-top: 3rem;">
         <h2 style="font-size: 1.5rem;">📌 Наше місце</h2>
-        <p style="font-size: 1.05rem;">Ми працюємо онлайн, але серцем завжди в Києві 💙💛</p>
-        <p style="font-weight: 600;">вул. Старокиївська, 10Г, Київ, Україна</p>
+        <p style="font-size: 1.05rem;">Ми працюємо онлайн, але серцем завжди у Вінниці 💙💛</p>
+        <p style="font-weight: 600;">вул. Героїв поліції, 28, Вінниця, Україна</p>
       </section>
 
       <section class="about-section" style="margin-top: 3rem;">
